<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/background"
    tools:viewBindingIgnore="false"
    android:padding="14dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/greetingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting_text"
        android:textSize="19sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/editTextSection"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailInput"
        android:layout_marginTop="24dp"
        android:minHeight="48dp"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:hint="@string/email_hint_text"
        android:textColor="@color/edit_text_input_color"
        android:textColorHint="@color/edit_text_input_color"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/userNameInput"
        android:layout_marginTop="18dp"
        android:inputType="text"
        android:minHeight="48dp"
        android:layout_width="match_parent"
        android:hint="@string/username_hint_text"
        android:textColor="@color/edit_text_input_color"
        android:textColorHint="@color/edit_text_input_color"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/firstNameInput"
        android:layout_marginTop="18dp"
        android:minHeight="48dp"
        android:inputType="text"
        android:layout_width="match_parent"
        android:hint="@string/firstname_hint_text"
        android:textColor="@color/edit_text_input_color"
        android:textColorHint="@color/edit_text_input_color"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/lastNameInput"
        android:layout_marginTop="18dp"
        android:inputType="text"
        android:layout_width="match_parent"
        android:minHeight="48dp"
        android:hint="@string/lastname_hint_text"
        android:textColor="@color/edit_text_input_color"
        android:textColorHint="@color/edit_text_input_color"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ageInput"
        android:layout_marginTop="18dp"
        android:minHeight="48dp"
        android:inputType="number"
        android:layout_width="match_parent"
        android:hint="@string/age_hint_text"
        android:textColor="@color/edit_text_input_color"
        android:textColorHint="@color/edit_text_input_color"
        android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveButton"
            android:layout_marginHorizontal="12dp"
            android:textColor="@color/edit_text_input_color"
            android:background="@drawable/custom_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clearButton"
            android:layout_marginHorizontal="12dp"
            android:textColor="@color/edit_text_input_color"
            android:background="@drawable/custom_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/againButton"
            android:visibility="invisible"
            android:textColor="@color/edit_text_input_color"
            android:layout_marginStart="12dp"
            android:background="@drawable/custom_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/again_button" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:visibility="invisible"
        android:id="@+id/resultSection"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:gravity="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_text_view"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/userEmail"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_template_text_view"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name_text_view"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/userFullName"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name_template"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_text_view"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/ageUserInput"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_template"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_text_view"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/inputUserNameTextView"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_template"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>